--- a/Pcm.html
+++ b/Pcm.html
@@ -3,9 +3,14 @@
 <head>
 <title>Petit coin</title>
 <body>
+<hr style = "color: #f0ff0f">
 
-<center><h1 style="color:blue"> Petit Coin Du Monde</h1> <br>
-Est en cours de developpement. Je Vous remercie pour votre visite.
+<center>
+    <h1 style="color:blue"> 
+       Petit Coin Du Monde
+    </h1>
+    Est en cours de developpement. <br />
+    Je Vous remercie pour votre visite.
 </center>
 
 
