--- a/pcm0.html
+++ b/pcm0.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+T3<!DOCTYPE html>
 <html  lang = "fr">
   <head>
      <!-- file 0 -->
        <title> Page 0 </title>
    
-       <link rel="stylesheet" href="../Style/headerstyle.css ">
+       <link rel="stylesheet" href="headerstyle.css ">
 
    </head>
 
@@ -51,7 +51,7 @@
 
    <footer class = "feet">
        <div id = "contact">
-              tel :+237673665947 | +237657375101  
+              tel :+2 | +2  
         <div id = "social">
             <a href="https://facebook.com">Facebook
             <a href="malto:hbug39457@gmail.com"><span style = "font-size: 20px">e</span>-mail
