--- a/pcm1.html
+++ b/pcm1.html
@@ -4,7 +4,7 @@
      <!-- file 1 -->
        <title> Page 1 </title>
    
-       <link rel="stylesheet" href="../Style/headerstyle.css ">
+       <link rel="stylesheet" href="headerstyle.css ">
 
    </head>
 
@@ -51,10 +51,10 @@
 
    <footer class = "feet">
        <div id = "contact">
-              tel :+237673665947 | +237657375101  
+              tel :+2 | +2  
         <div id = "social">
             <a href="https://facebook.com">Facebook
-            <a href="malto:hbug39457@gmail.com"><span style = "font-size: 20px">e</span>-mail
+            <a href="malto:@gmail.com"><span style = "font-size: 20px">e</span>-mail
         </div>
        </div>
 
