--- a/pcm0.html
+++ b/pcm0.html
@@ -54,7 +54,7 @@ T3<!DOCTYPE html>
               tel :+2 | +2  
         <div id = "social">
             <a href="https://facebook.com">Facebook
-            <a href="malto:hbug39457@gmail.com"><span style = "font-size: 20px">e</span>-mail
+            <a href="malto:@gmail.com"><span style = "font-size: 20px">e</span>-mail
         </div>
        </div>
 
