Mis à jour des fichiers

--- a/pcm1.html
+++ b/pcm1.html
@@ -4,7 +4,7 @@
      <!-- file 1 -->
        <title> Page 1 </title>
    
-       <link rel="stylesheet" href="headerstyle.css ">
+       <link rel="stylesheet" href="../Style/headerstyle.css ">
 
    </head>
 
@@ -15,7 +15,11 @@
        <header class = "head">
 <!--image src="../files/pcm.png"/-->
          <span id = "web_site_name"> 
+           <image style="width: 50px" src="logo.png" />
           PETIT COIN DU MONDE 
+         <br/>
+        <span style="color: #ffffff"><b> S</b></span><span style="font-size: 10px; color : #ffffff">alut, bienvenue au Petit coin du monde</span>
+ 
          </span>
         
      
@@ -51,10 +55,10 @@
 
    <footer class = "feet">
        <div id = "contact">
-              tel :+2 | +2  
+              tel :+237673665947 | +237657375101  
         <div id = "social">
             <a href="https://facebook.com">Facebook
-            <a href="malto:@gmail.com"><span style = "font-size: 20px">e</span>-mail
+            <a href="malto:hbug39457@gmail.com"><span style = "font-size: 20px">e</span>-mail
         </div>
        </div>
 
