--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
    <section>
 
-     <span style="font-size: 20px;"><b> S</b></span>alut, bienvenue au Petit coin du monde ...
+     <span style="font-size: 20px;"><b> S</b></span>alut, bienvenue au Petit coin du monde ....
    </section>
     
   <br/>
@@ -57,7 +57,7 @@
        <div id = "contact">
               tel :+237673665947 | +237657375101  
         <div id = "social">
-            <a href="https://facebook.com">Facebook
+            <a href="https://facebook.com" linkout = none >Facebook &#32;&#32;
             <a href="malto:hbug39457@gmail.com"><span style = "font-size: 20px">e</span>-mail
         </div>
        </div>
