--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
      <!-- file 0 -->
        <title> Page 0 </title>
-   
+        <meta charset="utf-8" />
        <link rel="stylesheet" href="../Style/headerstyle.css ">
 
    </head>
@@ -51,7 +51,14 @@
 
 
 
+
+
+
 <!-- This part, is a bottom of the page -->
+
+
+
+
 
    <footer class = "feet">
        <div id = "contact">
@@ -62,6 +69,6 @@
         </div>
        </div>
 
-</footer>
+  </footer>
 </body>
 </html>
