--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <span id = "web_site_name"> 
          <image style="width: 50px" src="logo.png" />
 
-          <b>PETIT COIN DU MONDE</b><strong>Bienvenue</strong> 
+          <b>PETIT COIN DU MONDE</b> <strong class = "bien">Bienvenue</strong> 
          <br/>
         <span style="color: #ffffff"><b> S</b></span><span style="font-size: 10px; color : #ffffff">alut, bienvenue au Petit coin du monde</span>
                 </span>
